# fab

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  README.md  README.rst  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  documentation.yml
Documentation/Design/: GraphObject.puml
Documentation/source/: advanced_config.rst  conf.py  config_intro.rst  development.rst  environment.rst  features.rst  index.rst  metoffice.rst  site-specific-config.rst  writing_config.rst
Documentation/source/fab_base/: config.rst  examples.rst  index.rst  processing.rst  usage_patterns.rst
Experimental/conda/: readme.md
envs/picasso/: readme
run_configs/: build_all.py
run_configs/_cron/: cron_system_tests.sh
run_configs/gcom/: build_gcom_ar.py  build_gcom_so.py  gcom_build_steps.py  grab_gcom.py
run_configs/jules/: build_jules.py
run_configs/lfric/: atm.py  grab_lfric.py  gungho.py  lfric_common.py  mesh_tools.py
run_configs/tiny_fortran/: build_tiny_fortran.py
run_configs/um/: build_um.py
source/fab/: __init__.py  api.py  artefacts.py  build_config.py  cli.py  dep_tree.py  errors.py  logtools.py  metrics.py  mo.py  util.py
source/fab/cui/: __main__.py  arguments.py
source/fab/fab_base/: __init__.py  fab_base.py
source/fab/parse/: __init__.py  c.py  fortran.py  fortran_common.py  x90.py
source/fab/steps/: __init__.py  analyse.py  archive_objects.py  c_pragma_injector.py  cleanup_prebuilds.py  compile_c.py  compile_fortran.py  find_source_files.py  link.py  preprocess.py  psyclone.py  root_inc_files.py
tests/: conftest.py
tests/unit_tests/: test_api.py  test_artefacts.py  test_build_config.py  test_config.py  test_cui_arguments.py  test_errors.py  test_logtools.py  test_mo.py  test_target.py
(+85 files in other folders)
