[project]
name = "sci-fab"
description = "Build system for scientific software"
authors = [
    {name = "Core Capabilities Development Team", email = 'CoreCapabilityDevelopmentTeam@metoffice.gov.uk'}
]
license = {file = 'LICENSE'}
dynamic = ['version', 'readme']
requires-python = '>=3.9, <4'
dependencies = ['fparser >= 0.2']
classifiers = [
    'Development Status :: 1 - Planning',
    'Environment :: Console',
    'License :: OSI Approved :: BSD License',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development :: Build Tools'
]

[project.optional-dependencies]
c-language = ['libclang']
plots = ['matplotlib']
docs = [
    'sphinx',
    'pydata-sphinx-theme>=0.13.3',
    'sphinx-autodoc-typehints',
    'sphinx-copybutton',
    "sphinxcontrib-svg2pdfconverter>=1.3.0"
]
dev = [
    'pytest >= 8.3.0',
    'pytest-cov',
    'pytest-mock',
    'pytest-subprocess >= 1.5.3',
    'pyfakefs',
    'flake8 >= 5.0.4',
    'mypy'
]

[project.scripts]
fab = 'fab.cui.__main__:main'

[project.urls]
homepage = 'https://github.com/MetOffice/fab'
documentation = 'https://MetOffice.github.io/fab'
repository = 'https://github.com/MetOffice/fab'
'Bug Reports' = 'https://github.com/MetOffice/fab/issues'

[tool.setuptools.packages.find]
where = ['source']

[tool.setuptools.dynamic]
readme = {file = 'README.md'}
version = {attr = 'fab.__version__'}

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

# This is required so that pytest finds conftest.py files.
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
